<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="string0000">Done</string>
    <string name="string0001">Navigate home</string>
    <string name="string0002">Navigate up</string>
    <string name="string0003">More options</string>
    <string name="string0004">Search</string>
    <string name="string0005">Search query</string>
    <string name="string0006">Clear query</string>
    <string name="string0007">Submit query</string>
    <string name="string0008">Voice search</string>
    <string name="string0009">Choose an app</string>
    <string name="string000a">See all</string>
    <string name="string000b">Share with %s</string>
    <string name="string000c">Share with</string>
    <string name="AppName">SQv8</string>
    <string name="string000e">自动登录</string>
    <string name="string000f">记住密码</string>
    <string name="string0010">登录</string>
    <string name="string0011">账号</string>
    <string name="string0012">密码</string>
    <string name="string0013">发送</string>
    <string name="string0014">卡片</string>
    <string name="string0015">XML</string>
    <string name="string0016">文本</string>
    <string name="string0056">11111111</string>
    <string name="key1">欢迎使用SQv8,本程序的自助授权仅可以查询授权和卡密，如需授权账号请使用影殇机器人进行授权\n感谢支持</string>
    <string name="key2">机器QQ</string>
    <string name="key3">查询授权</string>
    <string name="key4">查询卡密</string>
    <string name="key5">确定</string>
    <string name="notice1">公告</string>
    <string name="notice2">请仔细阅读以上内容</string>
    <string name="notice3">知道了</string>
</resources>
