<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#222222"
	android:gravity="center">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:textColor="@color/main"
		android:text="@string/key1"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
		android:background="#222222"/>

	<LinearLayout
		android:gravity="center"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:gravity="center"
			android:layout_width="70dp"
            android:textColor="@color/main"
			android:layout_height="wrap_content"
			android:text="@string/key2"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:inputType="number"
			android:ems="10"
			android:textColor="#FF1CFF00"
			android:textColorHint="#FF00FFB6"
			android:id="@+id/cxqqet"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
            android:textColor="@color/main"
			android:layout_marginRight="5dp"
			android:text="@string/key3"
			android:onClick="cxqqbt"/>

	</LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
		android:background="#222222"/>

	<LinearLayout
		android:gravity="center"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:gravity="center"
			android:layout_width="70dp"
            android:textColor="@color/main"
			android:layout_height="wrap_content"
			android:text="@string/key4"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:inputType="textPassword"
			android:ems="10"
			android:textColor="#FF1CFF00"
			android:textColorHint="#FF00FFB6"
			android:id="@+id/cxkeyet"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:textColor="@color/main"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:text="@string/key5"
			android:onClick="cxkeybt"/>

	</LinearLayout>

</LinearLayout>

