<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:id="@+id/id0031" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="?android:attr/textColorPrimary" android:gravity="center_vertical" android:id="@+id/id0032" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginBottom="2dp" android:drawablePadding="0dp"/>
    <ImageView android:layout_gravity="center_vertical" android:id="@+id/id0033" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/attr005f" android:contentDescription="@string/string0004" style="?attr/attr0016"/>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/id0034" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="4dp" android:layout_marginRight="8dp" android:layout_marginBottom="4dp" android:layout_weight="1">
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/id0035" android:visibility="gone" android:layout_width="@dimen/dimen0010" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen000e" android:src="?attr/attr005f" android:scaleType="centerInside"/>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/id0036" android:background="?attr/attr0063" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
            <view android:ellipsize="end" android:layout_gravity="bottom" android:id="@+id/id0037" android:background="@null" android:paddingLeft="@dimen/dimen000e" android:paddingRight="@dimen/dimen000f" android:layout_width="0dp" android:layout_height="36dp" android:minWidth="@dimen/dimen000c" android:singleLine="true" android:layout_weight="1" android:inputType="none|text|textAutoComplete|textNoSuggestions" android:dropDownAnchor="@+id/id0034" android:imeOptions="actionSearch" android:contentDescription="@string/string0005" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0dp" android:dropDownVerticalOffset="0dp" class="android.support.v7.widget.SearchView$SearchAutoComplete" style="?attr/attr0069"/>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/id0038" android:background="?attr/attr0019" android:paddingLeft="8dp" android:paddingRight="8dp" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/attr005d" android:contentDescription="@string/string0006"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/id0039" android:background="?attr/attr0064" android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/id003a" android:background="?attr/attr0019" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/attr005e" android:contentDescription="@string/string0007"/>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/id003b" android:background="?attr/attr0019" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/attr0060" android:contentDescription="@string/string0008"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
